No change event is triggered on condition change
"data.condition=..." executed in the click event handler of the AND/OR label does not trigger ngModelChange. Placing the radio button inside the label (and removing the (click) handler) solves the problem.

--- a/src/components/query-builder/query-builder.component.html
+++ b/src/components/query-builder/query-builder.component.html
@@ -28,12 +28,14 @@
   <ng-template #defaultSwitchGroup>
     <div [ngClass]="getClassNames('switchGroup', 'transition')" *ngIf="data">
       <div [ngClass]="getClassNames('switchControl')">
-        <input type="radio" [ngClass]="getClassNames('switchRadio')" [(ngModel)]="data.condition" (ngModelChange)="changeCondition()" value="and" #andOption/>
-        <label (click)="data.condition=andOption.value" [ngClass]="getClassNames('switchLabel')">AND</label>
+        <label [ngClass]="getClassNames('switchLabel')">AND
+          <input type="radio" [ngClass]="getClassNames('switchRadio')" [(ngModel)]="data.condition" (ngModelChange)="changeCondition()" value="and" #andOption/>
+        </label>
       </div>
       <div [ngClass]="getClassNames('switchControl')">
-        <input type="radio" [ngClass]="getClassNames('switchRadio')" [(ngModel)]="data.condition" (ngModelChange)="changeCondition()" value="or" #orOption/>
-        <label (click)="data.condition=orOption.value" [ngClass]="getClassNames('switchLabel')">OR</label>
+        <label [ngClass]="getClassNames('switchLabel')">OR
+          <input type="radio" [ngClass]="getClassNames('switchRadio')" [(ngModel)]="data.condition" (ngModelChange)="changeCondition()" value="or" #orOption/>
+        </label>
       </div>
     </div>
   </ng-template>
